Mon Sep 13 18:15:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

          *:
          Zapped trailing whitespaces using
          find -name \*.h -o -name \*.cpp -name \*.inl | xargs perl -i -pe's/\s+\n/\n/'

Mon Sep 13 14:04:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        Reverted change below, not correct given new info from Adam

        Thu Sep  9 11:49:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/gnu.mpd:
          Removed invalid comma, thanks to Frank Preischl
          <Frank dot Preischl at ids dot de> for reporting this

        * debian/debian.rules:
        * debian/mpc-ace.install:
          Improved

Mon Sep 13 09:25:22 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_doxygen.pl:
          Updated for DAnCE move

        * ace/ETCL/ETCL_Constraint.cpp:
        * ace/ETCL/ETCL_l.cpp.diff:
        * ace/ETCL/ETCL_l.cpp:
        * ace/Makefile.am:
        * ace/Thread_Control.inl:
        * ace/ace.mpc:
        * ace/ace_for_tao.mpc:
        * apps/JAWS3/bench/average.cpp:
        * apps/JAWS3/bench/mkfiles.cpp:
        * apps/JAWS3/bench/rqfiles.cpp:
        * apps/JAWS3/http/HTTP_Data.h:
        * apps/JAWS3/http/HTTP_Service_Handler.h:
        * apps/JAWS3/http/HTTP_Service_Handler.cpp:
        * apps/JAWS3/http/HTTP_States.h:
        * apps/JAWS3/jaws3-todo/Reactive_Socket.h:
        * apps/JAWS3/jaws3-todo/Reactive_Socket_Helpers.h:
        * apps/JAWS3/jaws3-todo/Reactive_Socket_Helpers.cpp:
        * apps/JAWS3/jaws3-todo/Socket.h:
        * apps/JAWS3/jaws3/Concurrency_T.h:
        * apps/JAWS3/small/SS_Data.h:
        * apps/JAWS3/small/SS_Service_Handler.h:
        * apps/JAWS3/small/SS_Service_Handler.cpp:
        * apps/JAWS3/small/SS_State_DONE.h:
        * apps/JAWS3/small/SS_State_DONE.cpp:
        * apps/JAWS3/small/SS_State_ERROR.h:
        * apps/JAWS3/small/SS_State_ERROR.cpp:
        * apps/JAWS3/small/SS_State_PARSE.h: