@@ -258,7 +258,7 @@ def update_version_files (component):
     version_header = """
 // -*- C++ -*-
 // $Id$
-// This is file was automatically generated by \$ACE_ROOT/bin/make_release.
+// This is file was automatically generated by \$ACE_ROOT/bin/make_release.py
 
 #define %s_MAJOR_VERSION %s
 #define %s_MINOR_VERSION %s
@@ -394,7 +394,7 @@ def update_debianbuild ():
         else:
             return match.group (1) + match.group (2) + comp_versions["ACE_version"] + match.group (4)
 
-    with open (doc_root + "/ACE/debian/control", 'r+') as control_file:
+    with open (doc_root + "/ACE/debian/debian.control", 'r+') as control_file:
         new_ctrl = ""
         for line in control_file.readlines ():
             if re.search ("^(Package|Depends|Suggests):", line) is not None:
@@ -412,22 +412,22 @@ def update_debianbuild ():
             print "New control file:"
             print "".join (new_ctrl)
 
-    files.append (doc_root + "/ACE/debian/control")
+    files.append (doc_root + "/ACE/debian/debian.control")
 
     # rewrite debian/dsc
     dsc_lines = """# Format: 1.0
-# Source: ace
-# Version: %s
-# Binary: ace
-# Maintainer: Johnny Willemsen  <jwillemsen@remedy.nl>
-# Architecture: any
-# Build-Depends: g++
-# Files:
-#  <hash> <size> ACE+TAO+CIAO-src-%s.tar.bz2
-#
+Source: ACE+TAO+CIAO-src-%s
+Version: %s
+Binary: ace
+Maintainer: Johnny Willemsen  <jwillemsen@remedy.nl>
+Architecture: any
+Build-Depends: gcc, make, g++, debhelper (>= 5), libssl-dev (>= 0.9.7d), dpatch (>= 2.0.10), libxt-dev (>= 4.3.0), libfltk1.1-dev (>= 1.1.4), libqt4-dev (>= 4.4~rc1-4), tk-dev (>= 8.4.7), zlib1g-dev, docbook-to-man, bzip2, autoconf, automake, libtool, autotools-dev, doxygen, graphviz
+Files:
+ 65b34001c9605f056713a7e146b052d1 46346654 ACE+TAO+CIAO-src-%s.tar.gz
+
 """ % (comp_versions["TAO_version"], comp_versions["ACE_version"])
     if opts.take_action:
-        with open (doc_root + "/ACE/debian/dsc", 'r+') as dsc_file:
+        with open (doc_root + "/ACE/debian/ace.dsc", 'r+') as dsc_file:
             dsc_file.seek (0)
             dsc_file.truncate (0)
             dsc_file.writelines (dsc_lines)
@@ -435,7 +435,7 @@ def update_debianbuild ():
         print "New dsc file:\n"
         print dsc_lines
 
-    files.append (doc_root + "/ACE/debian/dsc")
+    files.append (doc_root + "/ACE/debian/ace/dsc")
 
     return files
 
