@@ -3,6 +3,7 @@
 // cvs-id    : $Id$
 
 #include "ace/Log_Msg.h"
+#include "ace/OS_NS_unistd.h"
 
 #include "ace/RMCast/Socket.h"
 
